[package]
name = "genereto"
version = "0.1.0"
authors = ["Federico Ponzi <isaacisback92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "~0.10"
structopt = "~0.3"
pulldown-cmark = "~0.9"
serde = {version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
regex = "~1"
anyhow = "~1.0"