[package]
name = "genereto"
version = "0.1.0"
authors = ["Federico Ponzi <isaacisback92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempdir = "~0.3"

[dependencies]
log = "~0.4"
env_logger = "~0.11"
pulldown-cmark = "~0.10"
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
regex = "~1"
anyhow = "~1.0"
clap = { version = "4.2.7", features = ["derive"] }
chrono = "~0.4"
rss = "2.0.6"
