[package]
name = "genereto"
version = "0.2.0"
authors = ["Federico Ponzi <isaacisback92@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "~3"

[dependencies]
log = "~0.4"
env_logger = { version = "~0.11", default-features = false }
pulldown-cmark = { version = "^0.12", default-features = false, features = ["html"] }
serde = { version = "~1.0", features = ["derive"], default-features = false }
serde_yaml_ng = "~0.10"
regex = "~1"
anyhow = "~1.0"
clap = { version = "4.2.7", default-features = false, features = ["derive", "std", "help"] }
chrono = { version = "~0.4", default-features = false, features = ["std", "clock"] }
rss = { version = "2.0.6", default-features = false, features = ["builders"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
